removed a vertical scroll issue on mobile

--- a/style.css
+++ b/style.css
@@ -296,7 +296,7 @@ footer a:hover {
     height: 60px;
     position: absolute;
     display: flex;
-    bottom: 4px;
+    bottom: 12px;
     user-select: none;
 }
 
